--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.15.19",
     "@react-three/xr": "^5.7.0",
+    "mapbox-gl": "^3.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^8.1.0",
     "three": "^0.158.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-basic-ssl": "^2.1.4",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
